--- a/waterfall.css
+++ b/waterfall.css
@@ -23,8 +23,7 @@ h2,
 h3,
 h4,
 h5,
-h6,
-p {
+h6 {
   margin: 1rem 0 1rem 0;
   text-shadow: none;
 }
@@ -36,6 +35,35 @@ block::after {
   height: 0;
 }
 .column,
+.col1,
+.col2,
+.col3,
+.col3x2,
+.col4,
+.col4x2,
+.col4x3,
+.col5,
+.col5x2,
+.col5x3,
+.col5x4,
+.col6,
+.col6x2,
+.col6x3,
+.col6x4,
+.col6x5,
+.col7,
+.col7x2,
+.col7x3,
+.col7x4,
+.col7x5,
+.col7x6,
+.col8,
+.col8x2,
+.col8x3,
+.col8x4,
+.col8x5,
+.col8x6,
+.col8x7,
 col1,
 col2,
 col3,
@@ -67,36 +95,11 @@ col8x6,
 col8x7 {
   box-sizing: border-box;
   float: left;
+  padding: .3rem .3rem;
 }
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child {
+.pad,
+[row][pad] > * > :first-child {
+  padding: 0.6rem 0.6rem;
   border: 1px solid rgba(255, 255, 255, 0.8);
   background: rgba(255, 255, 255, 0.3);
 }
@@ -141,90 +144,119 @@ container {
   color: #ffffff;
   border-radius: 1rem;
 }
+.col1,
 col1 {
   width: 100%;
 }
+.col2,
 col2 {
   width: 50%;
 }
+.col3,
 col3 {
   width: 33.33333333%;
 }
+.col3x2,
 col3x2 {
   width: 66.66666667%;
 }
+.col4,
 col4 {
   width: 25%;
 }
+.col4x2,
 col4x2 {
   width: 50%;
 }
+.col4x3,
 col4x3 {
   width: 75%;
 }
+.col5,
 col5 {
   width: 20%;
 }
+.col5x2,
 col5x2 {
   width: 40%;
 }
+.col5x3,
 col5x3 {
   width: 60%;
 }
+.col5x4,
 col5x4 {
   width: 80%;
 }
+.col6,
 col6 {
   width: 16.66666667%;
 }
+.col6x2,
 col6x2 {
   width: 33.33333333%;
 }
+.col6x3,
 col6x3 {
   width: 50%;
 }
+.col6x4,
 col6x4 {
   width: 66.66666667%;
 }
+.col6x5,
 col6x5 {
   width: 83.333335%;
 }
+.col7,
 col7 {
   width: 14.28571429%;
 }
+.col7x2,
 col7x2 {
   width: 28.571428%;
 }
+.col7x3,
 col7x3 {
   width: 42.857142%;
 }
+.col7x4,
 col7x4 {
   width: 57.142856%;
 }
+.col7x5,
 col7x5 {
   width: 71.42857%;
 }
+.col7x6,
 col7x6 {
   width: 85.714284%;
 }
+.col8,
 col8 {
   width: 12.5%;
 }
+.col8x2,
 col8x2 {
   width: 25%;
 }
+.col8x3,
 col8x3 {
   width: 37.5%;
 }
+.col8x4,
 col8x4 {
   width: 50%;
 }
+.col8x5,
 col8x5 {
   width: 62.5%;
 }
+.col8x6,
 col8x6 {
   width: 75%;
 }
+.col8x7,
 col8x7 {
   width: 87.5%;
 }
@@ -325,7 +357,7 @@ col8x7 {
 }
 @media (max-width: 1200px) {
   body {
-    background: #0ac;
+    background: #0AC;
   }
   guide:before {
     content: "large";
