--- a/waterfall.less
+++ b/waterfall.less
@@ -4,9 +4,11 @@
 @large: 1200px;
 @giant: 9999px;
 
-// @col-padding: 0.4rem .4rem;
-@col-padding: 0;
-@colc:  0.3rem 1.2rem;
+@col-padding: 0.4rem .4rem;
+// @col-padding: 1rem;
+@colc:  0.6rem 0.6rem;
+
+// @colc:  0;
 @row-margin-top: 2px;
 @row-margin-bottom: 2px;
 
@@ -26,6 +28,9 @@
 
 
 
+
+
+
 html {
   box-sizing: border-box;
   font-size: 90%;
@@ -36,7 +41,7 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
   padding: 0;
-  margin: 0;;
+  margin: 0;
   vertical-align: top;
 }
 
@@ -49,7 +54,7 @@ body{
 }
 
 
-h1, h2, h3, h4, h5, h6, p{
+h1, h2, h3, h4, h5, h6{
   margin: 1rem 0 1rem 0;
 
   text-shadow: none;
@@ -69,7 +74,7 @@ block::after {
 .column {
   box-sizing: border-box;
   float:left;
-  // padding: @col-padding;
+  padding: .3rem .3rem;
   // margin-top: @row-margin-top;
   // margin-bottom: @row-margin-bottom;
 }
@@ -83,102 +88,15 @@ body{
 }
 
 
-
-
-
-// .pad{
-//   // display:block;
-//   // padding: @colc;
-//   // border:1px solid @bdcol;
-//   // background: @bgcol;
-//   // text-align: center;
-//   // color: @colText;
-// }
-
-
-
-// [margin]{
-//   border-spacing: 0px 0;
-//   // margin-left: -10px;
-//   // border-collapse: collapse;
-//   display: table;
-//   width:100%;
-//   border-collapse: separate;
-// }
-
-// [margin] >{
-//   background:#faf;
-//   display: table-cell;
-//   float: none;
-//   height:100%;
-//   // clear:left;
-// }
-
-// [margin] >:first-child{
-//   background:#ffa;
-//   display: block;
-//   float: left;
-// }
-
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child,
-[row] > * p:first-child {
-  // padding: @colc;
+.pad {
+  padding: @colc;
   border:1px solid @bdcol;
   background: @bgcol;
-
 }
 
-
-
-
-// row {
-//   display: table;
-//   width: 100%;
-//   // margin-top: @row-margin-top;
-//   // margin-bototm: @row-margin-bottom;
-// }
-
-// row > * {
-//   display: table-cell;
-//   float: none;
-// }
-
-
-// .marg{
-//   border:1px solid red!important;
-//   background: #fff;
-//   display:block;
-//   height: 100%;
-//   float:none;
-//   display: table-cell;
-// }
+[row][pad] > * > :first-child {
+  &:extend(.pad);
+}
 
 
 
@@ -187,7 +105,6 @@ container {
   max-width: @max-width;
   margin: 0 auto;
 }
-
 
 
 .example {
@@ -232,43 +149,85 @@ container {
 
 
 
+.col1   { &:extend(.column); width: percentage(1);             }
+.col2   { &:extend(.column); width: percentage(1/2);           }
+.col3   { &:extend(.column); width: percentage(1/3);           }
+.col3x2 { &:extend(.column); width: percentage(1/1.5);         }
+.col4   { &:extend(.column); width: percentage(1/4);           }
+.col4x2 { &:extend(.column); width: percentage(1/2);           }
+.col4x3 { &:extend(.column); width: percentage(1*0.75);        }
+.col5   { &:extend(.column); width: percentage(1/5);           }
+.col5x2 { &:extend(.column); width: percentage(1*0.4);         }
+.col5x3 { &:extend(.column); width: percentage(1*0.6);         }
+.col5x4 { &:extend(.column); width: percentage(1*0.8);         }
+.col6   { &:extend(.column); width: percentage(1/6);           }
+.col6x2 { &:extend(.column); width: percentage(1/3);           }
+.col6x3 { &:extend(.column); width: percentage(1/2);           }
+.col6x4 { &:extend(.column); width: percentage(1/1.5);         }
+.col6x5 { &:extend(.column); width: percentage(1*0.83333335);  }
+.col7   { &:extend(.column); width: percentage(1/7);           }
+.col7x2 { &:extend(.column); width: percentage(1*0.28571428);  }
+.col7x3 { &:extend(.column); width: percentage(1*0.42857142);  }
+.col7x4 { &:extend(.column); width: percentage(1*0.57142856);  }
+.col7x5 { &:extend(.column); width: percentage(1*0.7142857);   }
+.col7x6 { &:extend(.column); width: percentage(1*0.85714284);  }
+.col8   { &:extend(.column); width: percentage(1/8);           }
+.col8x2 { &:extend(.column); width: percentage(1/4);           }
+.col8x3 { &:extend(.column); width: percentage(1*0.375);       }
+.col8x4 { &:extend(.column); width: percentage(1/2);           }
+.col8x5 { &:extend(.column); width: percentage(1*0.625);       }
+.col8x6 { &:extend(.column); width: percentage(1*0.75);        }
+.col8x7 { &:extend(.column); width: percentage(1*0.875);       }
 
-col1   { &:extend(.column); width: percentage(1);             }
-col2   { &:extend(.column); width: percentage(1/2);           }
-col3   { &:extend(.column); width: percentage(1/3);           }
-col3x2 { &:extend(.column); width: percentage(1/1.5);         }
-col4   { &:extend(.column); width: percentage(1/4);           }
-col4x2 { &:extend(.column); width: percentage(1/2);           }
-col4x3 { &:extend(.column); width: percentage(1*0.75);        }
-col5   { &:extend(.column); width: percentage(1/5);           }
-col5x2 { &:extend(.column); width: percentage(1*0.4);         }
-col5x3 { &:extend(.column); width: percentage(1*0.6);         }
-col5x4 { &:extend(.column); width: percentage(1*0.8);         }
-col6   { &:extend(.column); width: percentage(1/6);           }
-col6x2 { &:extend(.column); width: percentage(1/3);           }
-col6x3 { &:extend(.column); width: percentage(1/2);           }
-col6x4 { &:extend(.column); width: percentage(1/1.5);         }
-col6x5 { &:extend(.column); width: percentage(1*0.83333335);  }
-col7   { &:extend(.column); width: percentage(1/7);           }
-col7x2 { &:extend(.column); width: percentage(1*0.28571428);  }
-col7x3 { &:extend(.column); width: percentage(1*0.42857142);  }
-col7x4 { &:extend(.column); width: percentage(1*0.57142856);  }
-col7x5 { &:extend(.column); width: percentage(1*0.7142857);   }
-col7x6 { &:extend(.column); width: percentage(1*0.85714284);  }
-col8   { &:extend(.column); width: percentage(1/8);           }
-col8x2 { &:extend(.column); width: percentage(1/4);           }
-col8x3 { &:extend(.column); width: percentage(1*0.375);       }
-col8x4 { &:extend(.column); width: percentage(1/2);           }
-col8x5 { &:extend(.column); width: percentage(1*0.625);       }
-col8x6 { &:extend(.column); width: percentage(1*0.75);        }
-col8x7 { &:extend(.column); width: percentage(1*0.875);       }
+
+
+col1   { &:extend(.col1  ); }
+col2   { &:extend(.col2  ); }
+col3   { &:extend(.col3  ); }
+col3x2 { &:extend(.col3x2); }
+col4   { &:extend(.col4  ); }
+col4x2 { &:extend(.col4x2); }
+col4x3 { &:extend(.col4x3); }
+col5   { &:extend(.col5  ); }
+col5x2 { &:extend(.col5x2); }
+col5x3 { &:extend(.col5x3); }
+col5x4 { &:extend(.col5x4); }
+col6   { &:extend(.col6  ); }
+col6x2 { &:extend(.col6x2); }
+col6x3 { &:extend(.col6x3); }
+col6x4 { &:extend(.col6x4); }
+col6x5 { &:extend(.col6x5); }
+col7   { &:extend(.col7  ); }
+col7x2 { &:extend(.col7x2); }
+col7x3 { &:extend(.col7x3); }
+col7x4 { &:extend(.col7x4); }
+col7x5 { &:extend(.col7x5); }
+col7x6 { &:extend(.col7x6); }
+col8   { &:extend(.col8  ); }
+col8x2 { &:extend(.col8x2); }
+col8x3 { &:extend(.col8x3); }
+col8x4 { &:extend(.col8x4); }
+col8x5 { &:extend(.col8x5); }
+col8x6 { &:extend(.col8x6); }
+col8x7 { &:extend(.col8x7); }
+
+
+
+
+
+
+
+
 
 
 //    s  m  l  g
 // xs sm md lg xl
 
 @media (max-width: @giant) {
-  body{ background: #FA0; }
+  body{
+    background: #FA0;
+  }
+
   guide:before { content:"giant"; }
   [g1]   { width: percentage(1);             }
   [g2]   { width: percentage(1/2);           }
@@ -303,7 +262,12 @@ col8x7 { &:extend(.column); width: percentage(1*0.875);       }
 
 
 @media (max-width: @large) {
-  body{ background: #0ac; }
+
+  body{
+    background: #0AC;
+  }
+
+
   guide:before { content:"large"; }
   [l1]   { width: percentage(1);             }
   [l2]   { width: percentage(1/2);           }
