working on grunt.

--- a/index.less
+++ b/index.less
@@ -656,3 +656,23 @@ guide block > row > * {
   border-right: 1px dashed #ff00ff !important;
   background: none!important;
 }
+@media (max-width: 500px) {
+  body {
+    background: #0c0;
+  }
+}
+@media (max-width: 800px) {
+  body {
+    background: #CC0;
+  }
+}
+@media (max-width: 1200px) {
+  body {
+    background: #0AC;
+  }
+}
+@media (max-width: 9999px) {
+  body {
+    background: #FA0;
+  }
+}
