--- a/test.less
+++ b/test.less
@@ -1,28 +1,16 @@
-
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
 }
-
-.a{
+.a {
   display: table;
   width: 100%;
   border-collapse: separate;
-  border-spacing:10px 0;
+  border-spacing: 10px 0;
 }
-
-.b{
-  width:percent(1/3);
-  border:1px solid black;
+.b {
+  width: percent(0.33333333);
+  border: 1px solid black;
   display: table-cell;
-  background: fade(#0af, 50%);
+  background: rgba(0, 170, 255, 0.5);
 }
-
-
-
-// .c{
-//   height:100%;
-//   background: #0af;
-//   display: table-cell;
-
-// }
