--- a/index.css
+++ b/index.css
@@ -23,7 +23,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+xmp {
   margin: 1rem 0 1rem 0;
   text-shadow: none;
 }
@@ -98,7 +99,7 @@ col8x7 {
   padding: .3rem .3rem;
 }
 .pad,
-[row][pad] > * > :first-child {
+[pad] > * > :first-child {
   padding: 0.6rem 0.6rem;
   border: 1px solid rgba(255, 255, 255, 0.8);
   background: rgba(255, 255, 255, 0.3);
@@ -261,9 +262,6 @@ col8x7 {
   width: 87.5%;
 }
 @media (max-width: 9999px) {
-  body {
-    background: #FA0;
-  }
   guide:before {
     content: "giant";
   }
@@ -356,9 +354,6 @@ col8x7 {
   }
 }
 @media (max-width: 1200px) {
-  body {
-    background: #0AC;
-  }
   guide:before {
     content: "large";
   }
@@ -451,9 +446,6 @@ col8x7 {
   }
 }
 @media (max-width: 800px) {
-  body {
-    background: #CC0;
-  }
   guide:before {
     content: "medium";
   }
@@ -546,9 +538,6 @@ col8x7 {
   }
 }
 @media (max-width: 500px) {
-  body {
-    background: #0c0;
-  }
   guide:before {
     content: "small";
   }
@@ -666,4 +655,24 @@ guide block > row > * {
   border-left: 1px dashed #ff00ff !important;
   border-right: 1px dashed #ff00ff !important;
   background: none!important;
+}
+@media (max-width: 500px) {
+  body {
+    background: #0c0;
+  }
+}
+@media (max-width: 800px) {
+  body {
+    background: #CC0;
+  }
+}
+@media (max-width: 1200px) {
+  body {
+    background: #0AC;
+  }
+}
+@media (max-width: 9999px) {
+  body {
+    background: #FA0;
+  }
 }
