Simplyfing. Less selectors needed.

--- a/waterfall.css
+++ b/waterfall.css
@@ -1,669 +1,1 @@
-html {
-  box-sizing: border-box;
-  font-size: 90%;
-  font-family: verdana;
-  color: #383838;
-}
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-  padding: 0;
-  margin: 0;
-  vertical-align: top;
-}
-p {
-  text-align: left;
-}
-body {
-  line-height: 1rem;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 1rem 0 1rem 0;
-  text-shadow: none;
-}
-block::after {
-  visibility: hidden;
-  display: block;
-  content: "";
-  clear: both;
-  height: 0;
-}
-.column,
-.col1,
-.col2,
-.col3,
-.col3x2,
-.col4,
-.col4x2,
-.col4x3,
-.col5,
-.col5x2,
-.col5x3,
-.col5x4,
-.col6,
-.col6x2,
-.col6x3,
-.col6x4,
-.col6x5,
-.col7,
-.col7x2,
-.col7x3,
-.col7x4,
-.col7x5,
-.col7x6,
-.col8,
-.col8x2,
-.col8x3,
-.col8x4,
-.col8x5,
-.col8x6,
-.col8x7,
-col1,
-col2,
-col3,
-col3x2,
-col4,
-col4x2,
-col4x3,
-col5,
-col5x2,
-col5x3,
-col5x4,
-col6,
-col6x2,
-col6x3,
-col6x4,
-col6x5,
-col7,
-col7x2,
-col7x3,
-col7x4,
-col7x5,
-col7x6,
-col8,
-col8x2,
-col8x3,
-col8x4,
-col8x5,
-col8x6,
-col8x7 {
-  box-sizing: border-box;
-  float: left;
-  padding: .3rem .3rem;
-}
-.pad,
-[row][pad] > * > :first-child {
-  padding: 0.6rem 0.6rem;
-  border: 1px solid rgba(255, 255, 255, 0.8);
-  background: rgba(255, 255, 255, 0.3);
-}
-container {
-  display: block;
-  max-width: 960px;
-  margin: 0 auto;
-}
-.example,
-.eg col1,
-.eg col2,
-.eg col3,
-.eg col3x2,
-.eg col4,
-.eg col4x2,
-.eg col4x3,
-.eg col5,
-.eg col5x2,
-.eg col5x3,
-.eg col5x4,
-.eg col6,
-.eg col6x2,
-.eg col6x3,
-.eg col6x4,
-.eg col6x5,
-.eg col7,
-.eg col7x2,
-.eg col7x3,
-.eg col7x4,
-.eg col7x5,
-.eg col7x6,
-.eg col8,
-.eg col8x2,
-.eg col8x3,
-.eg col8x4,
-.eg col8x5,
-.eg col8x6,
-.eg col8x7 {
-  border: 1px solid rgba(255, 255, 255, 0.8);
-  background: rgba(255, 255, 255, 0.3);
-  text-align: center;
-  color: #ffffff;
-  border-radius: 1rem;
-}
-.col1,
-col1 {
-  width: 100%;
-}
-.col2,
-col2 {
-  width: 50%;
-}
-.col3,
-col3 {
-  width: 33.33333333%;
-}
-.col3x2,
-col3x2 {
-  width: 66.66666667%;
-}
-.col4,
-col4 {
-  width: 25%;
-}
-.col4x2,
-col4x2 {
-  width: 50%;
-}
-.col4x3,
-col4x3 {
-  width: 75%;
-}
-.col5,
-col5 {
-  width: 20%;
-}
-.col5x2,
-col5x2 {
-  width: 40%;
-}
-.col5x3,
-col5x3 {
-  width: 60%;
-}
-.col5x4,
-col5x4 {
-  width: 80%;
-}
-.col6,
-col6 {
-  width: 16.66666667%;
-}
-.col6x2,
-col6x2 {
-  width: 33.33333333%;
-}
-.col6x3,
-col6x3 {
-  width: 50%;
-}
-.col6x4,
-col6x4 {
-  width: 66.66666667%;
-}
-.col6x5,
-col6x5 {
-  width: 83.333335%;
-}
-.col7,
-col7 {
-  width: 14.28571429%;
-}
-.col7x2,
-col7x2 {
-  width: 28.571428%;
-}
-.col7x3,
-col7x3 {
-  width: 42.857142%;
-}
-.col7x4,
-col7x4 {
-  width: 57.142856%;
-}
-.col7x5,
-col7x5 {
-  width: 71.42857%;
-}
-.col7x6,
-col7x6 {
-  width: 85.714284%;
-}
-.col8,
-col8 {
-  width: 12.5%;
-}
-.col8x2,
-col8x2 {
-  width: 25%;
-}
-.col8x3,
-col8x3 {
-  width: 37.5%;
-}
-.col8x4,
-col8x4 {
-  width: 50%;
-}
-.col8x5,
-col8x5 {
-  width: 62.5%;
-}
-.col8x6,
-col8x6 {
-  width: 75%;
-}
-.col8x7,
-col8x7 {
-  width: 87.5%;
-}
-@media (max-width: 9999px) {
-  body {
-    background: #FA0;
-  }
-  guide:before {
-    content: "giant";
-  }
-  [g1] {
-    width: 100%;
-  }
-  [g2] {
-    width: 50%;
-  }
-  [g3] {
-    width: 33.33333333%;
-  }
-  [g3x2] {
-    width: 66.66666667%;
-  }
-  [g4] {
-    width: 25%;
-  }
-  [g4x2] {
-    width: 50%;
-  }
-  [g4x3] {
-    width: 75%;
-  }
-  [g5] {
-    width: 20%;
-  }
-  [g5x2] {
-    width: 40%;
-  }
-  [g5x3] {
-    width: 60%;
-  }
-  [g5x4] {
-    width: 80%;
-  }
-  [g6] {
-    width: 16.66666667%;
-  }
-  [g6x2] {
-    width: 33.33333333%;
-  }
-  [g6x3] {
-    width: 50%;
-  }
-  [g6x4] {
-    width: 66.66666667%;
-  }
-  [g6x5] {
-    width: 83.333335%;
-  }
-  [g7] {
-    width: 14.28571429%;
-  }
-  [g7x2] {
-    width: 28.571428%;
-  }
-  [g7x3] {
-    width: 42.857142%;
-  }
-  [g7x4] {
-    width: 57.142856%;
-  }
-  [g7x5] {
-    width: 71.42857%;
-  }
-  [g7x6] {
-    width: 85.714284%;
-  }
-  [g8] {
-    width: 12.5%;
-  }
-  [g8x2] {
-    width: 25%;
-  }
-  [g8x3] {
-    width: 37.5%;
-  }
-  [g8x4] {
-    width: 50%;
-  }
-  [g8x5] {
-    width: 62.5%;
-  }
-  [g8x6] {
-    width: 75%;
-  }
-  [g8x7] {
-    width: 87.5%;
-  }
-}
-@media (max-width: 1200px) {
-  body {
-    background: #0AC;
-  }
-  guide:before {
-    content: "large";
-  }
-  [l1] {
-    width: 100%;
-  }
-  [l2] {
-    width: 50%;
-  }
-  [l3] {
-    width: 33.33333333%;
-  }
-  [l3x2] {
-    width: 66.66666667%;
-  }
-  [l4] {
-    width: 25%;
-  }
-  [l4x2] {
-    width: 50%;
-  }
-  [l4x3] {
-    width: 75%;
-  }
-  [l5] {
-    width: 20%;
-  }
-  [l5x2] {
-    width: 40%;
-  }
-  [l5x3] {
-    width: 60%;
-  }
-  [l5x4] {
-    width: 80%;
-  }
-  [l6] {
-    width: 16.66666667%;
-  }
-  [l6x2] {
-    width: 33.33333333%;
-  }
-  [l6x3] {
-    width: 50%;
-  }
-  [l6x4] {
-    width: 66.66666667%;
-  }
-  [l6x5] {
-    width: 83.333335%;
-  }
-  [l7] {
-    width: 14.28571429%;
-  }
-  [l7x2] {
-    width: 28.571428%;
-  }
-  [l7x3] {
-    width: 42.857142%;
-  }
-  [l7x4] {
-    width: 57.142856%;
-  }
-  [l7x5] {
-    width: 71.42857%;
-  }
-  [l7x6] {
-    width: 85.714284%;
-  }
-  [l8] {
-    width: 12.5%;
-  }
-  [l8x2] {
-    width: 25%;
-  }
-  [l8x3] {
-    width: 37.5%;
-  }
-  [l8x4] {
-    width: 50%;
-  }
-  [l8x5] {
-    width: 62.5%;
-  }
-  [l8x6] {
-    width: 75%;
-  }
-  [l8x7] {
-    width: 87.5%;
-  }
-}
-@media (max-width: 800px) {
-  body {
-    background: #CC0;
-  }
-  guide:before {
-    content: "medium";
-  }
-  [m1] {
-    width: 100%;
-  }
-  [m2] {
-    width: 50%;
-  }
-  [m3] {
-    width: 33.33333333%;
-  }
-  [m3x2] {
-    width: 66.66666667%;
-  }
-  [m4] {
-    width: 25%;
-  }
-  [m4x2] {
-    width: 50%;
-  }
-  [m4x3] {
-    width: 75%;
-  }
-  [m5] {
-    width: 20%;
-  }
-  [m5x2] {
-    width: 40%;
-  }
-  [m5x3] {
-    width: 60%;
-  }
-  [m5x4] {
-    width: 80%;
-  }
-  [m6] {
-    width: 16.66666667%;
-  }
-  [m6x2] {
-    width: 33.33333333%;
-  }
-  [m6x3] {
-    width: 50%;
-  }
-  [m6x4] {
-    width: 66.66666667%;
-  }
-  [m6x5] {
-    width: 83.333335%;
-  }
-  [m7] {
-    width: 14.28571429%;
-  }
-  [m7x2] {
-    width: 28.571428%;
-  }
-  [m7x3] {
-    width: 42.857142%;
-  }
-  [m7x4] {
-    width: 57.142856%;
-  }
-  [m7x5] {
-    width: 71.42857%;
-  }
-  [m7x6] {
-    width: 85.714284%;
-  }
-  [m8] {
-    width: 12.5%;
-  }
-  [m8x2] {
-    width: 25%;
-  }
-  [m8x3] {
-    width: 37.5%;
-  }
-  [m8x4] {
-    width: 50%;
-  }
-  [m8x5] {
-    width: 62.5%;
-  }
-  [m8x6] {
-    width: 75%;
-  }
-  [m8x7] {
-    width: 87.5%;
-  }
-}
-@media (max-width: 500px) {
-  body {
-    background: #0c0;
-  }
-  guide:before {
-    content: "small";
-  }
-  [s1] {
-    width: 100%;
-  }
-  [s2] {
-    width: 50%;
-  }
-  [s3] {
-    width: 33.33333333%;
-  }
-  [s3x2] {
-    width: 66.66666667%;
-  }
-  [s4] {
-    width: 25%;
-  }
-  [s4x2] {
-    width: 50%;
-  }
-  [s4x3] {
-    width: 75%;
-  }
-  [s5] {
-    width: 20%;
-  }
-  [s5x2] {
-    width: 40%;
-  }
-  [s5x3] {
-    width: 60%;
-  }
-  [s5x4] {
-    width: 80%;
-  }
-  [s6] {
-    width: 16.66666667%;
-  }
-  [s6x2] {
-    width: 33.33333333%;
-  }
-  [s6x3] {
-    width: 50%;
-  }
-  [s6x4] {
-    width: 66.66666667%;
-  }
-  [s6x5] {
-    width: 83.333335%;
-  }
-  [s7] {
-    width: 14.28571429%;
-  }
-  [s7x2] {
-    width: 28.571428%;
-  }
-  [s7x3] {
-    width: 42.857142%;
-  }
-  [s7x4] {
-    width: 57.142856%;
-  }
-  [s7x5] {
-    width: 71.42857%;
-  }
-  [s7x6] {
-    width: 85.714284%;
-  }
-  [s8] {
-    width: 12.5%;
-  }
-  [s8x2] {
-    width: 25%;
-  }
-  [s8x3] {
-    width: 37.5%;
-  }
-  [s8x4] {
-    width: 50%;
-  }
-  [s8x5] {
-    width: 62.5%;
-  }
-  [s8x6] {
-    width: 75%;
-  }
-  [s8x7] {
-    width: 87.5%;
-  }
-}
-guide:before {
-  right: 0;
-  position: absolute;
-  color: #ff00ff;
-  border: 1px dotted #ff00ff;
-  text-shadow: 0 0 3px #fff;
-}
-guide {
-  display: none;
-  z-index: 1500;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 9999999%;
-}
-guide * {
-  height: 100%;
-}
-guide block > row > * {
-  border-radius: 0!important;
-  border-top: 0!important;
-  border-bottom: 0!important;
-  border-left: 1px dashed #ff00ff !important;
-  border-right: 1px dashed #ff00ff !important;
-  background: none!important;
-}
+html{box-sizing:border-box;font-size:90%;font-family:verdana;color:#383838}*,:after,:before{box-sizing:inherit;padding:0;margin:0;vertical-align:top}block::after{visibility:hidden;display:block;content:"";clear:both;height:0}*{box-sizing:border-box}.pad,[row][pad]>*>:first-child{padding:.6rem;border:1px solid rgba(255,255,255,.8);background:rgba(255,255,255,.3)}container{display:block;max-width:960px;margin:0 auto}@media (max-width:9999px){[g1],[g2],[g3],[g3x2],[g4],[g4x2],[g4x3],[g5],[g5x2],[g5x3],[g5x4],[g6x2],[g6x3],[g6x4],[g6x5],[g7],[g7x2],[g7x3],[g7x4],[g7x5],[g7x6],[g8],[g8x2],[g8x3],[g8x4],[g8x5],[g8x6],[g8x7]{float:left;padding:.3rem}body{background:#fa0}[g1]{width:100%}[g2],[g4x2],[g6x3],[g8x4]{width:50%}[g3],[g6x2]{width:33.33333333%}[g3x2],[g6x4]{width:66.66666667%}[g4],[g8x2]{width:25%}[g4x3],[g8x6]{width:75%}[g5]{width:20%}[g5x2]{width:40%}[g5x3]{width:60%}[g5x4]{width:80%}[g6]{float:left;padding:.3rem;width:16.66666667%}[g6x5]{width:83.333335%}[g7]{width:14.28571429%}[g7x2]{width:28.571428%}[g7x3]{width:42.857142%}[g7x4]{width:57.142856%}[g7x5]{width:71.42857%}[g7x6]{width:85.714284%}[g8]{width:12.5%}[g8x3]{width:37.5%}[g8x5]{width:62.5%}[g8x7]{width:87.5%}}@media (max-width:1200px){[l1],[l2],[l3],[l3x2],[l4],[l4x2],[l4x3],[l5],[l5x2],[l5x3],[l5x4],[l6x2],[l6x3],[l6x4],[l6x5],[l7],[l7x2],[l7x3],[l7x4],[l7x5],[l7x6],[l8],[l8x2],[l8x3],[l8x4],[l8x5],[l8x6],[l8x7]{float:left;padding:.3rem}body{background:#0ac}[l1]{width:100%}[l2],[l4x2],[l6x3],[l8x4]{width:50%}[l3],[l6x2]{width:33.33333333%}[l3x2],[l6x4]{width:66.66666667%}[l4],[l8x2]{width:25%}[l4x3],[l8x6]{width:75%}[l5]{width:20%}[l5x2]{width:40%}[l5x3]{width:60%}[l5x4]{width:80%}[l6]{float:left;padding:.3rem;width:16.66666667%}[l6x5]{width:83.333335%}[l7]{width:14.28571429%}[l7x2]{width:28.571428%}[l7x3]{width:42.857142%}[l7x4]{width:57.142856%}[l7x5]{width:71.42857%}[l7x6]{width:85.714284%}[l8]{width:12.5%}[l8x3]{width:37.5%}[l8x5]{width:62.5%}[l8x7]{width:87.5%}}@media (max-width:800px){[m1],[m2],[m3],[m3x2],[m4],[m4x2],[m4x3],[m5],[m5x2],[m5x3],[m5x4],[m6x2],[m6x3],[m6x4],[m6x5],[m7],[m7x2],[m7x3],[m7x4],[m7x5],[m7x6],[m8],[m8x2],[m8x3],[m8x4],[m8x5],[m8x6],[m8x7]{float:left;padding:.3rem}body{background:#cc0}[m1]{width:100%}[m2],[m4x2],[m6x3],[m8x4]{width:50%}[m3],[m6x2]{width:33.33333333%}[m3x2],[m6x4]{width:66.66666667%}[m4],[m8x2]{width:25%}[m4x3],[m8x6]{width:75%}[m5]{width:20%}[m5x2]{width:40%}[m5x3]{width:60%}[m5x4]{width:80%}[m6]{float:left;padding:.3rem;width:16.66666667%}[m6x5]{width:83.333335%}[m7]{width:14.28571429%}[m7x2]{width:28.571428%}[m7x3]{width:42.857142%}[m7x4]{width:57.142856%}[m7x5]{width:71.42857%}[m7x6]{width:85.714284%}[m8]{width:12.5%}[m8x3]{width:37.5%}[m8x5]{width:62.5%}[m8x7]{width:87.5%}}@media (max-width:500px){[s1],[s2],[s3],[s3x2],[s4],[s4x2],[s4x3],[s5],[s5x2],[s5x3],[s5x4],[s6x2],[s6x3],[s6x4],[s6x5],[s7],[s7x2],[s7x3],[s7x4],[s7x5],[s7x6],[s8],[s8x2],[s8x3],[s8x4],[s8x5],[s8x6],[s8x7]{float:left;padding:.3rem}body{background:#0c0}[s1]{width:100%}[s2],[s4x2],[s6x3],[s8x4]{width:50%}[s3],[s6x2]{width:33.33333333%}[s3x2],[s6x4]{width:66.66666667%}[s4],[s8x2]{width:25%}[s4x3],[s8x6]{width:75%}[s5]{width:20%}[s5x2]{width:40%}[s5x3]{width:60%}[s5x4]{width:80%}[s6]{float:left;padding:.3rem;width:16.66666667%}[s6x5]{width:83.333335%}[s7]{width:14.28571429%}[s7x2]{width:28.571428%}[s7x3]{width:42.857142%}[s7x4]{width:57.142856%}[s7x5]{width:71.42857%}[s7x6]{width:85.714284%}[s8]{width:12.5%}[s8x3]{width:37.5%}[s8x5]{width:62.5%}[s8x7]{width:87.5%}}
