--- a/test.css
+++ b/test.css
@@ -1,16 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-.a {
-  display: table;
-  width: 100%;
-  border-collapse: separate;
-  border-spacing: 10px 0;
-}
-.b {
-  width: percent(0.33333333);
-  border: 1px solid black;
-  display: table-cell;
-  background: rgba(0, 170, 255, 0.5);
-}
+*{margin:0;padding:0}.a{display:table;width:100%;border-collapse:separate;border-spacing:10px 0}.b{width:percent(.33333333);border:1px solid #000;display:table-cell;background:rgba(0,170,255,.5)}
